# MyApp

./: CMakeLists.txt  README.md  main.cpp  run.sh
res/shader/: Mandelbrot.shader  Mfragment.shader  Mvertex.shader  fragment.shader  vertex.shader
src/: IndexBuffer.cpp  IndexBuffer.hpp  Math.hpp  OBJLoader.cpp  OBJLoader.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.hpp  main.cpp
src/tests/: Test.cpp  Test.hpp  TestClearColor.cpp  TestClearColor.hpp  TestCube.cpp  TestCube.hpp  TestMandelbrot.cpp  TestMandelbrot.hpp
